--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expense-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/rohanrockstar/Expense-Tracker.git",
+  "homepage": "https://github.com/rohanrockstar/Expense-Tracker",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
